# rvim

./: .gitignore  Cargo.toml  long.txt  lorem.txt  test  test.txt
src/: buffer.rs  common.rs  config.rs  log.rs  main.rs  terminal.rs  undo.rs
