[package]
name = "rvim"
version = "0.1.0"
edition = "2021"

[dependencies]
termion = "4.0.0"
talculia = {path = "/home/jacob/Sync/Rust/talculia/", optional=true}
lazy_static = "1.4.0"
notify = "6.1.1"
toml = "0.8.12"
serde = {version="1.0.198", features=["std", "derive", "serde_derive"]}
wl-clipboard-rs = "0.8.1"
time = { version = "0.3.36", features = ["serde"] }
serde_json = "1.0.117"

[features]
default = ["talculia"]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
strip = true
